--- a/express-typescript/package.json
+++ b/express-typescript/package.json
@@ -5,18 +5,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "tsc": "tsc",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.4.6",
     "@types/pg": "^8.10.2",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
-    "typeorm": "^0.3.17",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -24,7 +26,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.11.2",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   }
 }
