Validate backend using zod

--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "zod": "3.21.4"
   }
 }
